# OMSCS

6310-sad/A3/: Attack_1-personal.puml  Defend_1-persona.puml  weather_class.puml
6310-sad/exam 2/: exam 1 class diagram.puml
6310-sad/exam1/: lawnmower_class_d2.puml  lawnmower_d1.puml
AI4R/: README.md  final exam quesitons  rait_env.yml  test_env_setup.py
AI4R/Lecture Code/: L1_Localization.py  L2_KalmanFilter.py  L3_ParticleFilter.py  L4_Search.py  L5_PID.py  L6_SLAM.py  test.py
AI4R/Problem sets/: checkutil.py  ps6_answers.py
AI4R/rait/: pyproject.toml
AI4R/rait/src/rait/: __init__.py  rait.py
ML4T/: environment.yml  util.py
ML4T/assess_learners/: BagLearner.py  DTLearner.py  DTLearner_temp.py  DTLearner_unmerged.py  InsaneLearner.py  LinRegLearner.py  RTLearner.py  comments.txt  grade_learners.py  np_tester.py  original_dt_testlearner.py  testlearner.py
ML4T/assess_learners_copy/: BagLearner.py  DTLearner.py  InsaneLearner.py  comments.txt  testlearner.py
ML4T/assess_portfolio/: analysis.py  comments.txt  grade_analysis.py  pd_testing.py
ML4T/defeat_learners/: DTLearner.py  LinRegLearner.py  benhizak_test.py  comments.txt  gen_data.py  grade_best4.py  performance.txt  testbest4.py
ML4T/exam/: exam.py
ML4T/grading/: grading.py
ML4T/indicator_evaluation/: TheoreticallyOptimalStrategy.py  class_code_issue.py  indicators.py  marketsimcode.py  p6_results.txt  testproject.py  tos.csv
ML4T/lessons/: 01-01_ReadingAndPlottingDatap3.py  01-06_HistogramsAndScatterPlotsp3-1.py  01-07_SharpeRatioAndOtherPortfolioStatisticsp3-1.py  (+1 more)
(+124 files in other folders)
