[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rait"
version = "0.0.1"
description = "A simple matrix implementation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

